tests/struct_field_defaults_type_mismatch_bad.stderr
tests/struct_field_defaults_type_mismatch_bad.hop:3:10: error: HOP2046: default expression type mismatch for field 'a'
