tests/struct_field_defaults_type_mismatch_bad.hop
// Verifies struct field defaults type mismatch is rejected.
struct Bad {
	a i32 = "x"
}
